--- a/src/API/appsettings.Development.json
+++ b/src/API/appsettings.Development.json
@@ -4,5 +4,6 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "SqlServer": "Server=localhost,1433;Database=QuickBite;TrustServerCertificate=true;User Id=sa;Password=Pass@word;"
 }
