--- a/src/Infra.CrossCutting/Infra.CrossCutting.csproj
+++ b/src/Infra.CrossCutting/Infra.CrossCutting.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Application\Application.csproj" />
     <ProjectReference Include="..\Domain\Domain.csproj" />
     <ProjectReference Include="..\Infra.Data\Infra.Data.csproj" />
   </ItemGroup>
