--- a/src/API/appsettings.Development.json
+++ b/src/API/appsettings.Development.json
@@ -5,5 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "SqlServer": "Server=localhost,1433;Database=QuickBite;TrustServerCertificate=true;User Id=sa;Password=Pass@word;"
+  "SqlServer": "Server=localhost,1433;Database=QuickBiteDevelopment;TrustServerCertificate=true;User Id=sa;Password=Pass@word;"
 }
