--- a/src/API/appsettings.json
+++ b/src/API/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "SqlServer": "Server=db,1433;Database=QuickBite;TrustServerCertificate=true;User Id=sa;Password=Pass@word;"
 }
