Finalização primeira fase.

--- a/src/Domain/Domain.csproj
+++ b/src/Domain/Domain.csproj
@@ -10,10 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Enums\" />
+    <PackageReference Include="pix-payload-generator.net" Version="1.0.21" />
   </ItemGroup>
 
 </Project>
