chage sql to mongo db

--- a/src/API/appsettings.Staging.json
+++ b/src/API/appsettings.Staging.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "SqlServer": "Server=db,1433;Database=QuickBiteStaging;TrustServerCertificate=true;User Id=sa;Password=Pass@word;"
+  "Mongo": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "QuickBiteStaging"
+  }
 }
