--- a/src/API/appsettings.json
+++ b/src/API/appsettings.json
@@ -6,5 +6,8 @@
     }
   },
   "AllowedHosts": "*",
-  "SqlServer": "Server=db,1433;Database=QuickBite;TrustServerCertificate=true;User Id=sa;Password=Pass@word;"
+  "Mongo": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "QuickBiteStaging"
+  }
 }
