--- a/src/API/appsettings.Staging.json
+++ b/src/API/appsettings.Staging.json
@@ -6,7 +6,7 @@
     }
   },
   "Mongo": {
-    "ConnectionString": "mongodb://localhost:27017",
-    "DatabaseName": "QuickBiteStaging"
+    "ConnectionString": "",
+    "DatabaseName": ""
   }
 }
