--- a/src/API/appsettings.json
+++ b/src/API/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "Mongo": {
-    "ConnectionString": "mongodb://localhost:27017",
-    "DatabaseName": "QuickBiteStaging"
+    "ConnectionString": "",
+    "DatabaseName": ""
   }
 }
