--- a/src/API/appsettings.Development.json
+++ b/src/API/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "Mongo": {
-    "ConnectionString": "mongodb://localhost:27017",
+    "ConnectionString": "mongodb://admin:mongodbk8sHml@localhost:8090",
     "DatabaseName": "QuickBiteStaging"
   }
 }
