--- a/src/Domain/Domain.csproj
+++ b/src/Domain/Domain.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="pix-payload-generator.net" Version="1.0.21" />
+    <PackageReference Include="MongoDB.Driver" Version="2.23.1" />
   </ItemGroup>
 
 </Project>
