--- a/k8s/Configurations/cluster-config.yml
+++ b/k8s/Configurations/cluster-config.yml
@@ -1,20 +1,28 @@
 kind: Cluster
 apiVersion: kind.x-k8s.io/v1alpha4
-nodes:
+nodes:  
+# - role: control-plane
+#   kubeadmConfigPatches:
+#   - |
+#     kind: InitConfiguration
+#     nodeRegistration:
+#       kubeletExtraArgs:
+#         node-labels: "ingress-ready=true"
+- role: control-plane
 - role: control-plane
 - role: worker
 - role: worker
 - role: worker
   extraPortMappings:
+  - containerPort: 30000
+    hostPort: 80
+    protocol: TCP
+    listenAddress: 127.0.0.1
   - containerPort: 30001
-    hostPort: 8088
+    hostPort: 443
     protocol: TCP
     listenAddress: 127.0.0.1
   - containerPort: 30002
-    hostPort: 8089
-    protocol: TCP
-    listenAddress: 127.0.0.1
-  - containerPort: 30003
-    hostPort: 8090
+    hostPort: 27017
     protocol: TCP
     listenAddress: 127.0.0.1
