--- a/k8s/api-deployment.yml
+++ b/k8s/api-deployment.yml
@@ -1,9 +1,17 @@
+# NAMESPACE
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: monolito
+  labels:
+    name: monolito
+---
 # CONFIG MAP
 apiVersion: v1
 kind: ConfigMap
 metadata:
   name: quickbite-cm
-  namespace: staging
+  namespace: monolito
 data:
   ASPNETCORE_ENVIRONMENT: Staging
   ASPNETCORE_URLS: http://+:80
@@ -13,17 +21,18 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: quickbite-sc
-  namespace: staging
+  namespace: monolito
 type: Opaque
 stringData:
-  SqlServer: Server=svc-sqlserver-cip,1433;Database=QuickBiteStaging;User Id=sa;Password=sqlserverk8sHml;TrustServerCertificate=True
+  Mongo__ConnectionString: mongodb://admin:mongodbk8sHml@mongodb-svc-cip.database.svc.cluster.local:27017
+  Mongo__DatabaseName: QuickBiteStaging
 ---
 # DEPLOYMENT
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: app-deployment
-  namespace: staging
+  namespace: monolito
 spec:
   replicas: 1
   selector:
@@ -78,23 +87,8 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: svc-quickbite-np
-  namespace: staging
-spec:
-  type: NodePort
-  selector:
-    app: quickbite-app
-  ports:
-  - protocol: TCP 
-    port: 80
-    targetPort: 80
-    nodePort: 30001
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: svc-quickbite-cip
-  namespace: staging
+  name: quickbite-svc-cip
+  namespace: monolito
 spec:
   type: ClusterIP
   selector:
@@ -103,4 +97,30 @@ spec:
   - protocol: TCP
     port: 80
     targetPort: 80
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: api-ingress
+  namespace: monolito
+  annotations:
+    cert-manager.io/issuer: "letsencrypt-homolog"
+    nginx.ingress.kubernetes.io/rewrite-target: /
+spec:
+  ingressClassName: nginx
+  tls:
+  - hosts:
+    - quickbite.com.br
+    secretName: letsencrypt-quickbite-cert
+  rules:
+    - host: quickbite.com.br
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: quickbite-svc-cip
+                port:
+                  number: 80
 
